add feed and sitemap

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -7,7 +7,7 @@
   <div class="social-icons">
     <a href="https://github.com/{{ site.author.github }}"><i class="fa fa-github" aria-hidden="true" target="_blank"></i></a>
     <a href="https://weibo.com/u/{{ site.author.weibo }}"><i class="fa fa-weibo" aria-hidden="true" target="_blank"></i></a>
-    <a href="https://plus.google.com/u/0/{{ site.author.googleplus }}"><i class="fa fa-google-plus" aria-hidden="true" target="_blank"></i></a>
+    <a href="{{ site.github.url }}/feed.xml"><i class="fa fa-rss" aria-hidden="true" target="_blank"></i></a>
     <a href="https://linkedin.com/in/{{ site.author.linkedin }}"><i class="fa fa-linkedin" aria-hidden="true" target="_blank"></i></a>
     <a href="mailto:{{ site.author.email }}"><i class="fa fa-envelope" aria-hidden="true" target="_blank"></i></a>
   </div>
