--- a/css/main.css
+++ b/css/main.css
@@ -407,6 +407,19 @@ pre {
 	color: #3d5b99;
 }
 
+.fa-rss {
+  padding: 5px;
+  -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+}
+
+.fa-rss:hover {
+  color: #000000;
+}
+
 .fa-google-plus {
   padding: 5px;
 	-o-transition:.5s;
