--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,9 +12,7 @@
 
   <link rel="stylesheet" href="{{ site.github.url }}/css/main.css">
   <link rel="stylesheet" href="{{ site.github.url }}/css/syntax.css">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700%7CPT+Sans:400">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Code+Pro">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quattrocento+Sans">
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css">
 
   <script type="text/javascript" async
@@ -22,6 +20,7 @@
   </script>
 
 
-  {% include google_analytics.html %}
+    {% include google_analytics.html %}
+    {% include baidutongji.html %}
 
 </head>
