--- a/css/main.css
+++ b/css/main.css
@@ -3,11 +3,12 @@
 */
 
 body {
-  font-family: "PT Serif", Georgia, "Times New Roman", serif;
-  font-size: 16px;
-  color: #222831;/*#3A3A3A;/*rgba(0,0,0,.8);/*#666;*/
-  line-height: 1.75rem;
-  /*background: #EAEAEA;*/
+  font-family: "Ubuntu Mono", "Microsoft YaHei", Arial, sans-serif;
+  font-size: 15px;
+  color: #252A34;/*#222831;/*#3A3A3A;/*rgba(0,0,0,.8);/*#666;*/
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+  background: #e8e8e8;
 }
 
 @media (max-width: 30em) {
@@ -17,7 +18,7 @@ body {
 }
 
 h1{
-  font-size: 1.3rem;
+  font-size: 1.5rem;
 }
 h2{
   font-size: 1.2rem;
@@ -37,14 +38,14 @@ h1 a {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Quattrocento Sans", sans-serif;
+  font-family: "Ubuntu Mono", "Microsoft YaHei";
   color: #333;
 }
 
 a {
   text-decoration: underline;
   /*border-bottom: 1px solid black;*/
-  color: #222831;/*#FF333E;*/
+  color: black; /*#222831;/*#FF333E;*/
   -o-transition:.5s;
     -ms-transition:.5s;
     -moz-transition:.5s;
@@ -110,7 +111,8 @@ blockquote p {
 .container {
   margin-left: auto;
   margin-right: auto;
-  width: 615px;
+  width: 715px;
+
 }
 
 @media (max-width: 1366px) {
@@ -134,7 +136,7 @@ blockquote p {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
   margin-bottom: 4rem;
-  font-family: "Quattrocento Sans", sans-serif;
+  font-family: "Ubuntu Mono", "Microsoft YaHei";
 }
 
 .masthead a:hover {
@@ -162,21 +164,31 @@ blockquote p {
 */
 
 .post-container {
-  margin-bottom: 4rem;
+    margin-bottom: 4rem;
 }
 
 .posts {
-  margin-bottom: 5rem;
-  padding: 0px;
+  margin-bottom: 2rem;
   list-style: none;
+  background-color: #fff;
+  padding: 20px  40px;
+  border-radius: 5px;
+  box-shadow: 0 0 0 0, 0 6px 12px rgba(34,34,34,0.1);
+}
+
+.posts h1 a {
+    color: #252A34;
+}
+.posts p {
+    color: #444F5A;
 }
 
 .post-date {
   display: block;
   margin-bottom: 1rem;
-  color:#bdc3c7;
-  font-family: 'Quattrocento Sans', sans-serif;
-  font-size:0.9rem;
+  color:#08D9D6;
+  font-family: 'Ubuntu Mono', sans-serif;
+  font-size:1rem;
 }
 
 .related {
@@ -193,12 +205,26 @@ blockquote p {
 }
 
 .readmore{
-  font-family: "PT Serif", Georgia, "Times New Roman", serif;
+  font-family: "Ubuntu Mono", "Microsoft YaHei";
   font-weight: 700;
   display: inline-block;
   letter-spacing: 1px;
   color: #FF2E63;
   float: right;
+}
+
+.post-tags {
+    display: inline-block;
+    font-size: 0.7rem;
+    color: #08D9D6;
+    border: 0.0625rem solid #08D9D6;
+    border-radius: 0.125rem;
+    text-decoration: none;
+    padding: 1px 4px;
+}
+
+.post-tags:hover{
+    color: inherit;
 }
 
 /*
@@ -207,7 +233,7 @@ blockquote p {
 
 .pagination {
   overflow: hidden;
-  font-family: 'Quattrocento Sans', sans-serif;
+  font-family: "Ubuntu Mono", "Microsoft YaHei";
   text-align: center;
 }
 
@@ -217,7 +243,7 @@ blockquote p {
 
 .pagination-button {
   color: #999;
-  border: 2px solid #e0e0e0;
+  border: 2px solid #999;
   padding: 8px 24px;
   display: inline-block;
   font-size: 16px;
@@ -292,10 +318,10 @@ blockquote p {
 
 pre,
 code {
-    font-size: 0.8rem;
+    font-size: 1rem;
     border-radius: 3px;
     background-color: #f5f5f5;
-    font-family: "Source Code Pro";
+    font-family: "Ubuntu Mono";
 }
 
 code {
@@ -484,21 +510,26 @@ pre {
 	color: black;
 }
 
-.fa-calendar{
-  color:#FF2E63;
+/*.fa-calendar{
+    color:#FF2E63;
 }
 
 .fa-clock-o{
   color: #FF2E63;
 }
+
+.fa-user{
+  color: #FF2E63;
+}*/
+
 .dataframe {
     width: 100%;
     margin-bottom: 20px;
-    border: 1px solid #dddddd;
+    border: 1px solid #373737;
     border-collapse: collapse;
     border-left: none;
     word-break: normal;
-    text-align: center;
+    text-align: left;
 }
 
 .dataframe thead th{
@@ -524,3 +555,20 @@ table{
     border-collapse: collapse;
     border-spacing: 0;
 }
+
+/*table {
+    border: 1px solid #373737;
+    margin-bottom: 20px;
+    text-align: left;
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+th {
+    padding: 10px;
+    background: #222;
+    color: #fff;
+}
+td {
+    padding: 10px;
+    border: 1px solid #222;
+}*/
